--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "@fastify/static": "^5.0.0",
+    "exceljs": "^4.4.0",
     "fastify": "^3.29.5",
     "fastify-static": "^4.7.0",
-    "mysql2": "^3.12.0"
+    "mysql2": "^3.12.0",
+    "xlsx": "^0.18.5"
   }
 }
